--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -9,6 +9,7 @@ stockton-types = { path = "../stockton-types" }
 winit = "0.19.1"
 gfx-hal = "0.2.0"
 arrayvec = "0.4.10"
+nalgebra-glm = "0.4.0"
 
 [features]
 default = ["vulkan"]
