--- a/stockton-types/Cargo.toml
+++ b/stockton-types/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-nalgebra = "0.18.0"
+nalgebra-glm = "0.4.0"
 stockton-bsp = "2.0.0"
 downcast-rs = "1.0.4"
