--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -10,6 +10,7 @@ winit = "0.19.1"
 gfx-hal = "0.2.0"
 arrayvec = "0.4.10"
 nalgebra-glm = "0.4.0"
+shaderc = "0.5.0"
 
 [features]
 default = ["vulkan"]
