--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -7,19 +7,18 @@ edition = "2018"
 [dependencies]
 stockton-types = { path = "../stockton-types" }
 winit = "0.19.1"
-gfx-hal = "0.2.0"
+gfx-hal = "0.2.1"
 arrayvec = "0.4.10"
 nalgebra-glm = "0.4.0"
 shaderc = "0.5.0"
 
 [features]
-default = ["vulkan"]
+default = []
 metal = ["gfx-backend-metal"]
 gl = ["gfx-backend-gl"]
 dx11 = ["gfx-backend-dx11"]
 dx12 = ["gfx-backend-dx12"]
 vulkan = ["gfx-backend-vulkan"]
-unstable = []
 
 [dependencies.gfx-backend-gl]
 version = "0.2"
