fix(render): add vulkan context code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ members = [
 
 [patch.crates-io]
 gfx-backend-gl = { git = "https://github.com/gfx-rs/gfx" }
+gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx" }
 gfx-hal = { git = "https://github.com/gfx-rs/gfx" }
