--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -13,7 +13,7 @@ nalgebra-glm = "0.4.0"
 shaderc = "0.5.0"
 
 [features]
-default = []
+default = ["vulkan"]
 metal = ["gfx-backend-metal"]
 gl = ["gfx-backend-gl"]
 dx11 = ["gfx-backend-dx11"]
