--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -11,6 +11,7 @@ gfx-hal = "0.2.1"
 arrayvec = "0.4.10"
 nalgebra-glm = "0.4.0"
 shaderc = "0.5.0"
+log = "0.4.0"
 
 [features]
 default = ["vulkan"]
