--- a/examples/render-triangles/Cargo.toml
+++ b/examples/render-triangles/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 
 [dependencies]
-stockton-render = { path = "../../stockton-render" }
+stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
 stockton-types = { path = "../../stockton-types" }
 stockton-bsp = "2.0.0"
 winit = "0.19.1"
@@ -12,7 +12,3 @@ log = "0.4.0"
 simple_logger = "1.0"
 rand = "0.7"
 
-[features]
-default = []
-gl = ["stockton-render/gl"]
-vulkan = ["stockton-render/vulkan"]
