--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -6,38 +6,16 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 [dependencies]
 stockton-types = { path = "../stockton-types" }
 winit = "0.19.1"
-gfx-hal = "^0.3"
+gfx-hal = "^0.5"
 arrayvec = "0.4.10"
 nalgebra-glm = "0.4.0"
 shaderc = "0.6.1"
 log = "0.4.0"
 
 [features]
-default = ["gl"]
-metal = ["gfx-backend-metal"]
-gl = ["gfx-backend-gl"]
-dx11 = ["gfx-backend-dx11"]
-dx12 = ["gfx-backend-dx12"]
+default = ["vulkan"]
 vulkan = ["gfx-backend-vulkan"]
 
-[dependencies.gfx-backend-gl]
-version = "0.3"
-features = ["glutin"]
-optional = true
-
 [dependencies.gfx-backend-vulkan]
-version = "0.3"
-features = ["winit"]
-optional = true
-
-[target.'cfg(any(target_os = "macos", all(target_os = "ios", target_arch = "aarch64")))'.dependencies.gfx-backend-metal]
-version = "0.3"
-optional = true
-
-[target.'cfg(windows)'.dependencies.gfx-backend-dx11]
-version = "0.3"
-optional = true
-
-[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
-version = "0.3"
+version = "^0.5"
 optional = true
