--- a/examples/render-quad/Cargo.toml
+++ b/examples/render-quad/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
 stockton-types = { path = "../../stockton-types" }
 stockton-bsp = "2.0.0"
-winit = "0.19.1"
+winit = "^0.21"
 log = "0.4.0"
 simple_logger = "1.0"
 rand = "0.7"
