refactor(render): remove old entity stuff from world type

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,6 @@
 members = [
     "stockton-types",
     "stockton-render",
-    "examples/render-quad"
+    "examples/render-quad",
+    "examples/render-bsp"
 ]
