refactor(all): move stockton-bsp to this repo and start using traits

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "stockton-types",
     "stockton-render",
+    "stockton-levels",
     "examples/render-quad",
     "examples/render-bsp"
 ]
