--- a/stockton-types/Cargo.toml
+++ b/stockton-types/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2018"
 
 [dependencies]
 nalgebra-glm = "^0.6"
-stockton-bsp = { git = "https://github.com/tcmal/rust-bsp.git" }
+stockton-levels = { path = "../stockton-levels" }
