--- a/examples/render-bsp/Cargo.toml
+++ b/examples/render-bsp/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 [dependencies]
 stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
 stockton-types = { path = "../../stockton-types" }
-stockton-bsp = { git = "https://github.com/tcmal/rust-bsp.git" }
+stockton-levels = { path = "../../stockton-levels" }
 winit = "^0.21"
 simple_logger = "1.0"
 image = "0.23.2"
