refactor(all): remove render-quad and optimise imports

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ GitHub.sublime-settings
 .history
 
 # End of https://www.gitignore.io/api/rust,sublimetext,visualstudiocode
+
+# Game data. Used for testing, but not sure about license yet
+textures/
