feat(render): drawing with multiple texture arrays
requires faces to be sorted by depth to work properly, which isn't currently happening

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,7 @@ GitHub.sublime-settings
 
 # Game data. Used for testing, but not sure about license yet
 textures/
+
+# Intermediate BSP files.
+*.srf
+*.prt
