--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,8 +25,8 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
-          override: nightly
+          toolchain: nightly
+          override: true
       - uses: actions-rs/cargo@v1
         with:
           command: test
