feat(all): start using an ECS

--- a/stockton-types/Cargo.toml
+++ b/stockton-types/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2018"
 
 [dependencies]
 nalgebra-glm = "^0.6"
+legion = { version = "^0.3" }
 stockton-levels = { path = "../stockton-levels" }
