--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -13,6 +13,7 @@ nalgebra-glm = "^0.6"
 shaderc = "0.6.1"
 log = "0.4.0"
 image = "0.23.2"
+legion = { version = "^0.3" }
 
 [features]
 default = ["vulkan"]
