refactor(all): 2018 edition

--- a/examples/render-bsp/Cargo.toml
+++ b/examples/render-bsp/Cargo.toml
@@ -2,6 +2,7 @@
 name = "render-bsp"
 version = "0.1.0"
 authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
