--- a/stockton-levels/Cargo.toml
+++ b/stockton-levels/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 description = "Library for parsing different types of .bsp files."
 repository = "https://github.com/tcmal/stockton"
 homepage = "https://github.com/tcmal/stockton"
+edition = "2018"
 
 [dependencies]
 nalgebra = "^0.20"
