--- a/examples/render-bsp/Cargo.toml
+++ b/examples/render-bsp/Cargo.toml
@@ -10,5 +10,5 @@ stockton-types = { path = "../../stockton-types" }
 stockton-levels = { path = "../../stockton-levels" }
 winit = "^0.21"
 log = "0.4.0"
-simple_logger = "1.0"
+simple_logger = "^1.11"
 image = "0.23.2"
