--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+stockton-input = { path = "../stockton-input" }
 stockton-levels = { path = "../stockton-levels" }
 stockton-types = { path = "../stockton-types" }
 winit = "^0.21"
