feat(contrib): add deltatime and flycam implementations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "stockton-input-codegen",
     "stockton-render",
     "stockton-levels",
+    "stockton-contrib",
     "examples/render-bsp",
     "examples/input-codegen"
 ]
