feat(contrib): add mouse input to flycam controls

--- a/stockton-input/Cargo.toml
+++ b/stockton-input/Cargo.toml
@@ -5,3 +5,4 @@ authors = ["Oscar Shrimpton <oscar.shrimpton.personal@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+stockton-types = { path = "../stockton-types" }
