feat(render): rendy-memory for textures
unfortunately this involves downgrading gfx-hal

--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -9,7 +9,7 @@ stockton-input = { path = "../stockton-input" }
 stockton-levels = { path = "../stockton-levels" }
 stockton-types = { path = "../stockton-types" }
 winit = "^0.21"
-gfx-hal = "^0.5"
+gfx-hal = "0.4.1"
 arrayvec = "0.4.10"
 nalgebra-glm = "^0.6"
 shaderc = "^0.7"
@@ -17,12 +17,13 @@ log = "0.4.0"
 image = "0.23.11"
 legion = { version = "^0.3" }
 egui = "^0.2"
+rendy-memory = "0.5.2"
 
 [features]
 default = ["vulkan"]
 vulkan = ["gfx-backend-vulkan"]
 
 [dependencies.gfx-backend-vulkan]
-version = "^0.5"
+version = "0.4.1"
 features = ["x11"]
 optional = true
