feat(render): multithreaded texture loading
also a bunch of supporting changes

--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -18,6 +18,7 @@ image = "0.23.11"
 legion = { version = "^0.3" }
 egui = "^0.2"
 rendy-memory = "0.5.2"
+rendy-descriptor = "0.5.1"
 
 [features]
 default = ["vulkan"]
