feat(render): WIP switch to anyhow for errors

--- a/stockton-render/Cargo.toml
+++ b/stockton-render/Cargo.toml
@@ -19,6 +19,8 @@ legion = { version = "^0.3" }
 egui = "^0.2"
 rendy-memory = "0.5.2"
 rendy-descriptor = "0.5.1"
+anyhow = "1.0.40"
+thiserror = "1.0.25"
 
 [features]
 default = ["vulkan"]
