refactor(levels): no longer q3 specific

--- a/stockton-levels/Cargo.toml
+++ b/stockton-levels/Cargo.toml
@@ -2,13 +2,11 @@
 name = "stockton-levels"
 version = "0.1.0"
 authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
-description = "Library for parsing different types of .bsp files."
+description = "Traits relating to levels renderable by stockton."
 repository = "https://github.com/tcmal/stockton"
 homepage = "https://github.com/tcmal/stockton"
 edition = "2018"
 
 [dependencies]
 nalgebra = "^0.20"
-bitflags = "^1.2"
-thiserror = "1.0.25"
-bitvec = "0.17"
+serde = { version = "1.0", features = ["derive"] }
