--- a/examples/render-quad/Cargo.toml
+++ b/examples/render-quad/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "render-bsp"
+name = "render-quad"
 version = "0.1.0"
 authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 edition = "2018"
