--- a/stockton-levels/Cargo.toml
+++ b/stockton-levels/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 [dependencies]
 nalgebra = "^0.20"
 serde = { version = "1.0", features = ["derive"] }
+stockton-types = { path = "../stockton-types" }
