refactor(all): separate rendering from framework
stockton-passes is mostly just a stand-in until this is
properly separated

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "stockton-input-codegen",
     "stockton-render",
     "stockton-levels",
+    "stockton-passes",
     "stockton-contrib",
     "rendy-memory",
     "rendy-descriptor",
