--- a/examples/render-quad/Cargo.toml
+++ b/examples/render-quad/Cargo.toml
@@ -11,6 +11,7 @@ stockton-input-codegen = { path = "../../stockton-input-codegen" }
 stockton-types = { path = "../../stockton-types" }
 stockton-levels = { path = "../../stockton-levels" }
 stockton-contrib = { path = "../../stockton-contrib", features = ["delta_time", "flycam"] }
+stockton-passes = { path = "../../stockton-passes" }
 winit = "^0.21"
 log = "0.4.0"
 simplelog = "^0.10"
