refactor(all): rename some crates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ members = [
     "stockton-types",
     "stockton-input",
     "stockton-input-codegen",
-    "stockton-render",
+    "stockton-skeleton",
     "stockton-levels",
-    "stockton-passes",
+    "stockton-render",
     "stockton-contrib",
     "rendy-memory",
     "rendy-descriptor",
