--- a/examples/render-quad/Cargo.toml
+++ b/examples/render-quad/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Oscar <oscar.shrimpton.personal@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-stockton-render = { path = "../../stockton-render", features = ["vulkan"] }
+stockton-skeleton = { path = "../../stockton-skeleton", features = ["vulkan"] }
 stockton-input = { path = "../../stockton-input" }
 stockton-input-codegen = { path = "../../stockton-input-codegen" }
 stockton-types = { path = "../../stockton-types" }
 stockton-levels = { path = "../../stockton-levels" }
 stockton-contrib = { path = "../../stockton-contrib", features = ["delta_time", "flycam"] }
-stockton-passes = { path = "../../stockton-passes" }
+stockton-render = { path = "../../stockton-render" }
 winit = "^0.21"
 log = "0.4.0"
 simplelog = "^0.10"
