--- a/stockton-levels/Cargo.toml
+++ b/stockton-levels/Cargo.toml
@@ -10,4 +10,5 @@ edition = "2018"
 [dependencies]
 nalgebra = "^0.20"
 serde = { version = "1.0", features = ["derive"] }
-stockton-types = { path = "../stockton-types" }
+stockton-skeleton = { path = "../stockton-skeleton" }
+image = "0.23.11"
